force-app/main/default/objects/API_details__c/API_details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>API details</label>
</CustomObject>