force-app/main/default/objects/API_details__c/fields/accountSID__c.field-meta.xml
<CustomField>
    <fullName>accountSID__c</fullName>
    <label>accountSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>