force-app/main/default/objects/API_details__c/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <label>EndPointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>