force-app/main/default/objects/API_details__c/fields/FromPhone__c.field-meta.xml
<CustomField>
    <fullName>FromPhone__c</fullName>
    <label>FromPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>